static/30_storagegateway/dm-lab-sg.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  KeyPair:
    Description: Select an existing EC2 key pair.
    Type: AWS::EC2::KeyPair::KeyName
Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: Migracion-datos-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: myVPC Internet Gateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: Target Subnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public Route Table

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  ClientInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-048ff3da02834afdc
      BlockDeviceMappings: 
      - DeviceName: "/dev/xvda"
        Ebs: 
          VolumeType: "standard"
          DeleteOnTermination: "true"
          VolumeSize: "8"
      SecurityGroupIds: 
        - !Ref ClientInstanceSecurityGroup
      SubnetId: !Ref PublicSubnet 
      Tags:
        - Key: "Name"
          Value: "Instancia cliente"
      KeyName: !Ref KeyPair
      UserData:
        'Fn::Base64': 
          !Sub |
            #!/bin/bash -xe 
            yum update -y
            cd /home/ec2-user/
            mkdir nas
            wget https://github.com/chadwickbureau/baseballdatabank/archive/v2019.2.zip
            unzip v2019.2.zip
            mv /home/ec2-user/baseballdatabank-2019.2 /home/ec2-user/baseball-data-2018-version
            rm v2019.2.zip
        #mount -t nfs ${NFSInstance.PrivateIp}:/mnt/nfs /home/ec2-user/nas
     #DependsOn: NFSInstance

  ClientInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

Outputs:
  ClientInstancePrivateIP:
    Description: Instancia cliente direcccion IP privada
    Value: !GetAtt ClientInstance.PrivateIp
